--- a/_posts/2020-08-15-myday.md
+++ b/_posts/2020-08-15-myday.md
@@ -19,4 +19,4 @@ Following a renovation of the hotel in 1981–85, the restaurant occupied a form
 
 Les Ambassadeurs had two Michelin stars. In the last decade of its operation, chef was Dominique Bouchet  followed by Jean-François Piège and finally when the hotel closed in 2013 for an extended renovation, Christopher Hache.
 
-![home](https://ilovecar.github.io/carreview/logo.jpeg)
+![home](https://ilovecar.github.io/car-review/logo.jpeg)
