--- a/_posts/2020-08-15-nopic.md
+++ b/_posts/2020-08-15-nopic.md
@@ -1,17 +1,19 @@
 ---
 layout: post
-title:  "我爱车评人"
-author: momo
-categories: [ Lifestyle ]
-tags: [ France ]
-rating: 4.3
+title:  "我爱旅行"
+author: john
+categories: [ Goods ]
+tags: [ MyCar ]
+image: "https://ilovecar.github.io/car-review/logo.jpeg"
+rating: 4
 ---
 
-住在Hôtel de Crillon, which was built in 1758, Les Ambassadeurs operated as a restaurant since the mid-19th century. It reached its peak of fame as a restaurant and nightclub (a café-concert) in the last three decades of the 19th century. 
+住在某个不出名的酒店。
 
 > 它是一个18世纪的城堡。
 > It was decorated in an 18th-century rococo style, redesigned by Sybille de Margérie with furnishings by Sonia Rykiel.
 
-Les Ambassadeurs had two Michelin stars. In the last decade of its operation, chef was Dominique Bouchet  followed by Jean-François Piège and finally when the hotel closed in 2013 for an extended renovation, Christopher Hache.
+正在看西游记。
 
-![home](https://ilovecar.github.io/carreview/logo.jpeg)
+
+![home](https://ilovecar.github.io/car-review/logo.jpeg)
