--- a/_posts/2020-08-15-nopic.md
+++ b/_posts/2020-08-15-nopic.md
@@ -5,7 +5,7 @@ author: john
 categories: [ Goods ]
 tags: [ MyCar ]
 image: "https://ilovecar.github.io/car-review/logo.jpeg"
-rating: 4
+#rating: 4
 ---
 
 住在某个不出名的酒店。
