--- a/_posts/2020-08-15-myday.md
+++ b/_posts/2020-08-15-myday.md
@@ -5,10 +5,10 @@ author: momo
 categories: [ Lifestyle ]
 tags: [ France ]
 image: assets/images/6.jpg
-rating: 4.3
+#rating: 4.0
 ---
 
-住在Hôtel de Crillon, which was built in 1758, Les Ambassadeurs operated as a restaurant since the mid-19th century. It reached its peak of fame as a restaurant and nightclub (a café-concert) in the last three decades of the 19th century. 
+住在1758, Les Ambassadeurs operated as a restaurant since the mid-19th century. It reached its peak of fame as a restaurant and nightclub (a café-concert) in the last three decades of the 19th century. 
 
 Always a center of entertainment for the aristocracy, in the 1870s it also became a regular destination of some of the best known figures of art and the demi-monde. Edgar Degas and Henri de Toulouse-Lautrec portrayed visitors at the night club, and Aristide Bruant performed there.
 
