--- a/_posts/2020-08-15-nopic.md
+++ b/_posts/2020-08-15-nopic.md
@@ -8,7 +8,7 @@ image: "https://ilovecar.github.io/car-review/logo.jpeg"
 #rating: 4
 ---
 
-住在某个不出名的酒店。
+住在某个不出名的酒店。住在9世纪的城市。没有人烟。雨中的林金。一刻也不停歇。这是一个孤独的城市。没有烟罗。
 
 > 它是一个18世纪的城堡。
 > It was decorated in an 18th-century rococo style, redesigned by Sybille de Margérie with furnishings by Sonia Rykiel.
