--- a/_posts/2020-08-16-giulia.md
+++ b/_posts/2020-08-16-giulia.md
@@ -4,7 +4,7 @@ title:  "我爱旅行"
 author: john
 categories: [ Goods ]
 tags: [ MyCar ]
-image: "https://ilovecar.github.io/car-review/logo.jpeg"
+image: assets/images/giulia.png
 #rating: 4
 ---
 
