--- a/_posts/2020-08-15-ilovecar.md
+++ b/_posts/2020-08-15-ilovecar.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "我爱车评人"
 author: momo
-categories: [ Lifestyle ]
-tags: [ France ]
+categories: [ Lifestyle, 汽车, Goods ]
+tags: [ France , 本田]
 image: assets/images/6.jpg
 #rating: 4.0
 ---
