--- a/_posts/2020-08-16-giulia.md
+++ b/_posts/2020-08-16-giulia.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "我爱旅行"
+title:  "朱利叶"
 author: john
-categories: [ Goods ]
-tags: [ MyCar ]
+categories: [ Goods, 汽车 ]
+tags: [ 旅行, 阿尔法罗蜜欧 ]
 image: assets/images/giulia.png
 #rating: 4
 ---
